# Code-Analyzer

./: .gitignore  README.md
.github/workflows/: ci.yml
Team39/: Folder.DotSettings
Team39/Code39/: .gitignore  CMakeLists.txt  CMakeSettings.json
Team39/Code39/src/autotester/: CMakeLists.txt
Team39/Code39/src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
Team39/Code39/src/integration_testing/: CMakeLists.txt
Team39/Code39/src/integration_testing/src/: TestFrontEnd.cpp  test_design_extractor.cpp  test_pkb_population.cpp
Team39/Code39/src/integration_testing/src/PQL/query_evaluator/: test_cache.cpp  test_clause.cpp  test_formatter.cpp  test_pattern_clause.cpp  test_query_evaluator.cpp  test_such_that_clause.cpp  test_util.h  test_with_clause.cpp
Team39/Code39/src/spa/: CMakeLists.txt
Team39/Code39/src/spa/src/: DesignExtractor.cpp  PKB.cpp  Parser.cpp  Parser.h  TNode.cpp  TNode.h  Tokenizer.cpp  Tokenizer.h  parser.cpp  parser.h  sp_exceptions.h
Team39/Code39/src/spa/src/PKB/: PKBExceptions.h  entity_table.cpp  entity_table.h  pkb.cpp  pkb.h  pkb_exceptions.h  results.cpp  results.h  temp.txt
Team39/Code39/src/spa/src/PKB/tables/: entity_tables.h  relation_tables.cpp  relation_tables.h  table.cpp  table.h
Team39/Code39/src/spa/src/PQL/: InterTable.cpp  InterTable.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Query.cpp  Query.h  QueryEvaluator.cpp  QueryEvaluator.h  Token.cpp  Token.h  clause.cpp  clause.h  lexer.cpp  parser.cpp  parser.h  query.cpp  query.h  query_evaluator.cpp  query_evaluator.h  query_evaluator_exceptions.h  solver.cpp  solver.h  token.cpp  token.h  utility.h
Team39/Code39/src/spa/src/PQL/query_evaluator/: clause.cpp  clause.h  formatter.cpp  formatter.h  intertable.cpp  intertable.h  predicate.cpp  predicate.h  query_evaluator.cpp  query_evaluator.h  query_evaluator_exceptions.h  solver.cpp  solver.h
Team39/Code39/src/spa/src/PQL/query_evaluator/cache/: cache.cpp  cache.h  generator.cpp  generator.h
Team39/Code39/src/spa/src/PQL/query_evaluator/clause/: clause.cpp  clause.h  pattern_clause.cpp  pattern_clause.h  such_that_clause.cpp  such_that_clause.h  with_clause.cpp  with_clause.h
Team39/Code39/src/spa/src/PQL/query_evaluator/formatter/: formatter.cpp  formatter.h
Team39/Code39/src/spa/src/PQL/query_evaluator/solver/: intertable.cpp  intertable.h  predicate.cpp  predicate.h  solver.cpp  solver.h  ufds.h
Team39/Code39/src/spa/src/PQL/query_parser/: lexer.cpp  parser.cpp  parser.h  query.cpp  query.h  token.cpp  token.h
Team39/Code39/src/spa/src/SP/: design_extractor.cpp  design_extractor.h  parser.cpp  parser.h  populator.cpp  populator.h  sp_exceptions.h  tokenizer.cpp  tokenizer.h  validator.cpp  validator.h
Team39/Code39/src/spa/src/SP/tokens/: assignment_pattern.cpp  assignment_pattern.h  conditional_expr.cpp  conditional_expr.h  procedure.cpp  procedure.h  stmt.cpp  stmt.h
Team39/Code39/src/spa/src/Utility/: AST.cpp  AST.h  Entity.h  Helper.cpp  Helper.h  PatternHelper.cpp  TNode.cpp  TNode.h  ast.cpp  ast.h  attr.h  control_flow_graph.h  entity.h  graph_node.cpp  graph_node.h  helper.cpp  helper.h  pattern_helper.cpp  t_node.cpp  t_node.h
Team39/Code39/src/spa/src/Utility/CFG/: cfg_token.cpp  cfg_token.h  control_flow_graph.cpp  control_flow_graph.h  graph_node.cpp  graph_node.h
Team39/Code39/src/unit_testing/: CMakeLists.txt
Team39/Code39/src/unit_testing/src/: TestAST.cpp  TestTokenizer.cpp  test_tokenizer.cpp
Team39/Code39/src/unit_testing/src/PKB/: test_entity_tables.cpp  test_pkb.cpp  test_relations_tables.cpp
Team39/Code39/src/unit_testing/src/PQL/: intertable_test.cpp  test_query_parsing.cpp
Team39/Code39/src/unit_testing/src/PQL/query_evaluator/: test_intertable.cpp  test_solver.cpp  test_ufds.cpp
Team39/Code39/src/unit_testing/src/SP/: test_design_extractor.cpp  test_population.cpp  test_tokenizer.cpp  test_validation.cpp
Team39/Code39/src/unit_testing/src/Utility/: TestAST.cpp  test_ast.cpp  test_control_flow_graph.cpp
Team39/Tests39/: q.txt  s.txt  test1_queries.txt  test2_queries.txt  test3_queries.txt
Team39/Tests39/iter1/: test1_source.txt
Team39/Tests39/iter2/: s1.txt  s1_q.txt  s2.txt  s2_q.txt  s3_q.txt  s4.txt  s4_q.txt
Team39/Tests39/iter3/: ifwhile_q.txt  invalid_semantics_q.txt  invalid_syntax_q.txt  next_and_affects_q.txt  next_and_affects_s.txt  next_q.txt  s2.txt  stress_testing_PQL.txt  stress_testing_SIMPLE.txt
Team39/Tests39/iter3/invalid/: invalid_s1.txt  invalid_s2.txt  invalid_s3.txt  s2_invalid_semantics_q.txt  s2_invalid_syntax_q.txt
Team39/Tests39/pql/invalid_queries/: 10_test1.txt  10_test2.txt  10_test3.txt  10_test4.txt  10_test5.txt  10_test6.txt  11_test1.txt  11_test2.txt  12_test1.txt  12_test2.txt  13_test1.txt  13_test2.txt  13_test3.txt  13_test4.txt  13_test5.txt  13_test6.txt  14_test1.txt  14_test2.txt  14_test3.txt  14_test4.txt  14_test5.txt  14_test6.txt  15_test1.txt  15_test2.txt  15_test3.txt  15_test4.txt  15_test5.txt  15_test6.txt  16_test1.txt  16_test2.txt  16_test3.txt  17_test2.txt  18_test1.txt  18_test2.txt  1_test1.txt  1_test2.txt  1_test3.txt  2_test1.txt  2_test2.txt  2_test3.txt  (+30 more)
Team39/Tests39/pql/valid_queries/: 2_test1.txt  2_test10.txt  2_test2.txt  2_test3.txt  2_test4.txt  2_test5.txt  2_test6.txt  2_test7.txt  2_test8.txt  2_test9.txt  3_test1.txt  3_test2.txt  3_test3.txt  4_test1.txt  5_test1.txt  5_test2.txt  5_test3.txt  5_test4.txt  5_test5.txt  6_test1.txt  6_test2.txt  6_test3.txt  6_test4.txt  6_test5.txt  6_test6.txt  6_test7.txt  6_test8.txt  7_test1.txt  7_test2.txt  7_test3.txt  7_test4.txt  8_test1.txt  8_test2.txt  8_test3.txt  8_test4.txt  8_test5.txt  9_test1.txt  9_test2.txt  9_test3.txt  9_test4.txt  (+1 more)
Team39/Tests39/sample_files/: sample_queries.txt
Team39/Tests39/sp/: test1.txt  test2.txt  test3.txt  test4.txt
Team39/Tests39/sp/invalid_programs/: 1_test1.txt  (+23 more)
Team39/Tests39/week10_demo/: and_q.txt  assign_pattern_q.txt  assign_pattern_s.txt  boolean_q.txt  complex_calls_q.txt  multiclause_q.txt  s1.txt  s1_queries.txt  s2_ifwhilenext_q.txt  tuple_q.txt  with_q.txt
(+32 files in other folders)
